--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -11,22 +11,22 @@
     <div class="row">
 
       <div class="column-text">
-        <h4>BTC: {{totalBalance.percentage.btc}}%</h4>
+        <h4>BTC: {{totalBalance?.percentage?.btc || "..." }}%</h4>
       </div>
 
       <div class="column-text">
-        <h4>ETH: {{totalBalance.percentage.eth}}%</h4>
+        <h4>ETH: {{totalBalance?.percentage?.eth || "..." }}%</h4>
       </div>
 
       <div class="column-text">
-        <h4>ETC: {{totalBalance.percentage.etc}}%</h4>
+        <h4>ETC: {{totalBalance?.percentage?.etc || "..." }}%</h4>
       </div>
 
     </div>
 
     <mat-card-actions>
       <h3>Total</h3>
-      <h2>{{totalBalance.total.usd}} USDt</h2>
+      <h2>{{totalBalance?.total?.usd || "..." }} USDt</h2>
     </mat-card-actions>
   </mat-card>
 
