--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -29,5 +29,9 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+  <mat-paginator #paginator
+                [length]="length"
+                [pageSizeOptions]="[5, 10, 25, 100]"
+                (page)="loadTrades($event)">
+  </mat-paginator>
 
