--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -11,7 +11,7 @@
       <app-trades-detail-table></app-trades-detail-table>
 
     <mat-card-actions style="text-align: center;">
-      <a mat-raised-button color="accent" routerLink="/trades">Show All</a>
+      <a mat-raised-button color="accent" routerLink="/trades">Show all</a>
     </mat-card-actions>
 
     </mat-card-content>
