--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -18,7 +18,7 @@
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <a mat-raised-button color ="accent" routerLink="/adjust-strategy" >Adjust the strategy</a>
+    <a mat-raised-button color ="accent" routerLink="/adjust-strategy" >Strategy</a>
   </mat-card-actions>
 </mat-card>
 
