--- a/src/app/adjust-strategy/adjust-strategy.component.html
+++ b/src/app/adjust-strategy/adjust-strategy.component.html
@@ -9,9 +9,9 @@
   <mat-divider></mat-divider>
 
   <mat-card-content>
-    <p>Currently the adjustment of the strategy through UI is not possible, however, there is corresponding documentation explaining the process</p>
+    <p>Currently the adjustment of the strategy through UI is not possible, however, there is corresponding documentation explaining the process.</p>
 
-    <mat-card-title>The details of available strategies</mat-card-title>
+    <h3>Available strategies:</h3>
     <ul>
       <li>The trend_ema strategy (default)</li>
       <li>The macd strategy </li>
