--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -27,8 +27,8 @@
 
     <!-- Price Column -->
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let trade"> {{trade.price}} USD </td>
+      <th mat-header-cell *matHeaderCellDef> Price USDt </th>
+      <td mat-cell *matCellDef="let trade"> {{trade.price}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
