--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -29,7 +29,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator
+  <mat-paginator #paginator *ngIf="paginatorVisible"
                 [length]="length"
                 [pageSizeOptions]="[5, 10, 25, 100]"
                 (page)="loadTrades($event)">
