--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -31,7 +31,7 @@
 
   <mat-paginator #paginator *ngIf="paginatorVisible"
                 [length]="length"
-                [pageSizeOptions]="[5, 10, 25, 100]"
+                [pageSizeOptions]="[10, 25, 100]"
                 (page)="loadTrades($event)">
   </mat-paginator>
 
