fixed the about and the strategy pages

--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -6,7 +6,7 @@
     <mat-card-title>About Mbot</mat-card-title>
   </mat-card-header>
   <mat-divider></mat-divider>
-
+<div class="text-content">
   <mat-card-content>
     <p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
     Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
@@ -31,6 +31,6 @@
   </div>
   <a mat-raised-button color ="accent" href="https://github.com/DeviaVir/zenbot">Visit the project page</a>
   </mat-card-content>
-
+</div>
 
 </mat-card>
