--- a/src/app/adjust-strategy/adjust-strategy.component.html
+++ b/src/app/adjust-strategy/adjust-strategy.component.html
@@ -7,7 +7,7 @@
     <mat-card-title>Adjusting the strategy</mat-card-title>
   </mat-card-header>
   <mat-divider></mat-divider>
-
+  <div class="text-content">
   <mat-card-content>
     <p>Currently the adjustment of the strategy through UI is not possible, however, there is corresponding documentation explaining the process.</p>
 
@@ -22,5 +22,6 @@
     <a mat-raised-button color ="accent" href="https://github.com/DeviaVir/zenbot/tree/unstable/docs">Documentation</a>
 
   </mat-card-content>
+  </div>
 </mat-card>
 </div>
