--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
   @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-
-
-
   h1,
     h2,
     h3,
     h4,
     h5,
-    h6, p {
+    h6, p, li {
       padding: 4px 4px;
       margin: 8px;
       color: #101A35;
@@ -53,6 +50,10 @@
   transform: translateY(3px);
   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1)
 
+}
+
+.text-content{
+  padding:40px;
 }
 
 .flex-container {
@@ -108,6 +109,7 @@ mat-icon.mat-card-avatar {
 }
 .mat-raised-button {
   border-radius: 20px !important;
+  margin-top: 15px !important;
   min-width: 200px !important;
 }
 
