--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,6 +17,7 @@
   .header {
     position: absolute;
     filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.1));
+    height: 60px;
     top: 0;
     left: 0;
     right: 0;
