--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <mat-card-actions>
-      <h3>Total</h3>
+      <h3>Total:</h3>
       <h2>{{totalBalance?.total?.usd || "..." }} USDt</h2>
     </mat-card-actions>
   </mat-card>
