added logo as a picture

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,10 @@
 <!-- Toolbar -->
 
 <mat-toolbar class="header">
-  <span class="spacer">Mbot</span>
+  <span class="spacer">
+    <img src="assets/svg/logo.svg"/>
+
+  </span>
 
     <nav >
       <a routerLink="/dashboard">Dashboard</a>
