--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,9 @@
 
 <mat-toolbar class="header">
   <span class="spacer">
-    <img src="assets/svg/logo.svg"/>
+    <object class="logo" type="image/svg+xml" data="assets/svg/logo.svg"></object>
+
+
 
   </span>
 
